# agentflow

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTFLOW-REFORM-PLAN.md  CLAUDE_CODE_EMBEDDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  agent_runner.py  agentflow-backend.py  agentflow_schema.py  artifact_broker.py  artifact_store.py  backend_audit_findings.json  canvas-demo.html  cc_agent_runner.py  claude_code_adapter.py  docker-compose.yml  eval_harness.py  evolution_engine.py  evolution_ledger.py  index.html  output_validator.py  package-lock.json  package.json  playwright-e2e-test.cjs  playwright-rf-test.cjs  prompt_compiler.py  provider_adapter.py  provider_registry.py  pyproject.toml  quality_gate.py  requirements.txt  run_event_bus.py  run_serial_assistant_agentflow.py  (+14 more)
.github/: PULL_REQUEST_TEMPLATE.md
01-vision-and-philosophy/: README.md
02-system-architecture/: 02.1-core-pipeline.md  02.2-layers.md  02.3-oss-strategy.md  README.md
03-data-contracts/: 03.1-workflow-json.md  03.2-prompt-task.md  03.3-envelope-json.md  README.md
04-prompt-compiler-agent/: 04.1-compiler-prompt.md  04.2-template-system.md  README.md
05-orchestrator/: 05.1-core-loop.md  05.2-container-lifecycle.md  05.2-error-handling.md  05.3-degradation-control.md  05.3-error-recovery.md  README.md
06-agent-runtime/: 06.1-registry.md  06.2-security.md  README.md
07-ui-and-canvas/: README.md
08-implementation-roadmap/: 08.1-phase-1.md  08.2-phase-2.md  08.3-phase-3.md  08.4-phase-4.md  README.md
(+358 files in other folders)
