[project]
name = "agentflow"
version = "0.1.0"
description = "Multi-Provider Agent Orchestration — from natural language to executable DAG"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Luwei Liao"},
]

dependencies = [
    # 零外部依赖 — 全部使用 Python stdlib
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools]
packages = []
